# pp-structure-deployment

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
docs/: plan.md  review.md  spec.md
scripts/: warm_weights.py
src/pp_structure_deployment/: app.py  pipeline.py  schemas.py
tests/: test_app.py  test_pipeline.py  test_schemas.py
