[project]
name = "pp-structure-deployment"
version = "0.1.0"
description = "FastAPI GPU deployment for PaddleOCR PPStructureV3"
readme = "README.md"
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2",
]

# GPU-only deps (paddleocr==3.7.0, paddlepaddle-gpu==3.2.1) are intentionally
# NOT declared here: paddlepaddle-gpu lives only on Paddle's CUDA-specific wheel
# index, not PyPI. They are installed in the Dockerfile with pinned versions and
# the CUDA index as a build ARG (see Dockerfile), which keeps this lock CPU-only
# so the test suite runs without a GPU.

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pyrefly>=1.1.1",
    "pyright>=1.1.411",
    "pytest>=8",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pp_structure_deployment"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "main.py", "tests"]
